# CrossDesk

./: .coverage  .gitignore  AGENT.md  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  FOLLOWUPS.md  README.md  ROADMAP.md  WORK_LOG.md  flake.nix  universals.md
.cargo/: config.toml
.claude/: architecture.md  ignorefiles.md
.githooks/: post-commit  pre-commit  pre-push
.github/: perf-baselines.json
docs/: AUDIT_AUTOMATED_2026-05-11.md  AUDIT_REPORT.md  CODE_SIGNING.md  COMPARISON_WINAPPS.md  COMPETITION.md  CROSS_PLATFORM_DEV.md  DECISIONS.md  DISPLAY.md  DISTRIBUTION.md  EXECUTION_PLAN.md  GOALS.md  GPU_PASSTHROUGH.md  GUI_DESIGN.md  GUI_PLAN.md  (+15 more)
guest/: Cargo.toml  deny.toml
guest/crates/agent-svc/: Cargo.toml
guest/crates/agent-svc/src/: credentials.rs  filesystem.rs  heartbeat.rs  host_uuid.rs  lib.rs  lifecycle.rs  main.rs  planes.rs  service.rs  session.rs
guest/crates/fs-mount/: Cargo.toml
guest/crates/fs-mount/src/: flush.rs  lib.rs  mount.rs
guest/crates/ipc-vsock/: Cargo.toml
guest/crates/ipc-vsock/src/: channel.rs  client.rs  connector.rs  lib.rs  tls.rs
guest/crates/ipc-vsock/src/transport/: mock.rs  mod.rs  real.rs
guest/crates/ipc-vsock/tests/: transport_mock.rs
guest/crates/observability/: Cargo.toml
guest/crates/observability/src/: lib.rs  trace.rs
guest/crates/proto/: Cargo.toml  build.rs
guest/crates/proto/src/: lib.rs
guest/crates/rail-bridge/: Cargo.toml
guest/crates/rail-bridge/src/: events.rs  lib.rs  windows.rs
guest/crates/registry-scan/: Cargo.toml
guest/crates/registry-scan/src/: entry.rs  lib.rs  mock_impl.rs  scanner.rs  windows_impl.rs
guest/xtask/: Cargo.toml
guest/xtask/src/: main.rs
gui/: Cargo.toml  README.md  deny.toml
gui/.cargo/: audit.toml
gui/crates/crossdesk-gui/: Cargo.toml  build.rs  qml.qrc
gui/crates/crossdesk-gui/i18n/: crossdesk_en.ts  crossdesk_pl.ts
gui/crates/crossdesk-gui/qml/: Main.qml  qmldir
gui/crates/crossdesk-gui/qml/manager/: About.qml  Apps.qml  Dashboard.qml  Diagnose.qml  Lifecycle.qml  Logs.qml  Manager.qml  Settings.qml  Storage.qml
gui/crates/crossdesk-gui/qml/wizard/: InstallWizard.qml  ProgressView.qml  Step1Iso.qml  Step2Identity.qml  Step2Review.qml  Step3Resources.qml
gui/crates/crossdesk-gui/src/: main.rs
gui/crates/crossdesk-gui/src/i18n/: mod.rs  translator.cpp  translator.h
gui/crates/crossdesk-gui/src/manager/: format.rs
gui/crates/crossdesk-gui/src/qobjects/: manager.rs  mod.rs  wizard.rs
gui/crates/crossdesk-gui/src/wizard/: mod.rs  progress.rs  state.rs
gui/crates/crossdesk-tray/: Cargo.toml
gui/crates/crossdesk-tray/src/: indicator.rs  lib.rs  main.rs  state.rs
host/: .coverage  build_proto.py  conftest.py  pyproject.toml  test_client.py
host/benches/: bench_N1_1_cold_launch.py  bench_N1_2_suspend.py  bench_N1_6_recovery.py  bench_heartbeat_fsm.py
host/src/crossdesk_host/: __main__.py  config.py  daemon.py  i18n.py  uninstall.py
host/src/crossdesk_host/abstractions/: __init__.py  freerdp.py  libvirt.py  transport.py
host/src/crossdesk_host/catalog/: __init__.py  apps.toml  curated.py  loader.py  ratings.py  schema.py  user_apps.py
host/src/crossdesk_host/cli/: __init__.py  apps_cmd.py  credentials_cmd.py  doctor_cmd.py  install_cmd.py  launch_cmd.py  logs_cmd.py  main.py  metrics_cmd.py  uninstall_cmd.py  version_cmd.py  vm_cmd.py
host/src/crossdesk_host/config/: __init__.py  peripherals.py
host/src/crossdesk_host/display/: hidpi.py  multimonitor.py  path_translation.py  rail_command.py  rail_manager.py  session_starter.py
host/src/crossdesk_host/doctor/: __init__.py  checks.py
host/src/crossdesk_host/freerdp/: __init__.py  mock.py  real.py
host/src/crossdesk_host/installer/: __init__.py  credentials.py  iso_downloader.py  settings.py  state.py
host/src/crossdesk_host/integrations/: __init__.py  mime.py  notifications.py  portal.py
host/src/crossdesk_host/integrations/keyring/: __init__.py  base.py  file_backend.py  gnome.py  kwallet.py  mock.py  picker.py
host/src/crossdesk_host/ipc/: auth.py  control.py  filesystem.py  heartbeat.py  management.py  server.py  verify_coordinator.py  version_negotiation.py
host/src/crossdesk_host/jit_mount/: __init__.py  path_validation.py
host/src/crossdesk_host/libvirt_ctl/: mock.py  real.py
host/src/crossdesk_host/lifecycle/: __init__.py  coordinator.py  dbus_listener.py  notifications.py
host/src/crossdesk_host/observability/: __init__.py  grpc_interceptor.py  log.py  metrics.py  otlp.py  redaction.py  trace_ctx.py
host/src/crossdesk_host/proto/crossdesk/v1/: common_pb2.py  common_pb2.pyi  common_pb2_grpc.py  common_pb2_grpc.pyi  control_pb2.py  control_pb2.pyi  control_pb2_grpc.py  control_pb2_grpc.pyi  filesystem_pb2.py  filesystem_pb2.pyi  filesystem_pb2_grpc.py  filesystem_pb2_grpc.pyi  heartbeat_pb2.py  heartbeat_pb2.pyi  heartbeat_pb2_grpc.py  heartbeat_pb2_grpc.pyi  mgmt_pb2.py  mgmt_pb2.pyi  mgmt_pb2_grpc.py  mgmt_pb2_grpc.pyi
host/src/crossdesk_host/recovery/: __init__.py  bundle.py  snapshot.py
host/src/crossdesk_host/transport/: __init__.py  mock.py  real.py
host/src/crossdesk_host/watchdog/: __init__.py  autopause.py  ewma.py  fsm.py  sleep_sync.py
host/tests/: conftest.py  test_app_catalog.py  test_auth_rejection_paths.py  test_auth_validator.py  test_autopause.py  test_bench_check.py  test_catalog.py  test_cli_errors.py  test_cli_smoke.py  test_config.py  test_config_peripherals.py  test_control_service.py  test_credentials.py  test_desktop_generator.py  test_filesystem_service.py  test_freerdp_mock.py  test_gpu_detection.py  test_grpc_interceptor.py  test_heartbeat_fsm.py  test_hidpi.py  test_i18n.py  test_install_state.py  test_install_state_concurrency.py  test_iso_downloader_edges.py  test_jit_mount_path.py  test_keyring.py  test_launch_cmd.py  test_libvirt_mock.py  test_lifecycle_coordinator.py  test_log_shape.py  test_logs_cmd.py  test_management_metrics.py  test_management_service.py  test_metrics.py  test_metrics_integration.py  test_mount_token_length.py  test_multimonitor.py  test_notifications.py  test_otlp.py  test_path_translation.py  (+21 more)
(+43 files in other folders)
