[workspace]
resolver = "2"
members = [
    "crates/agent-svc",
    "crates/ipc-vsock",
    "crates/observability",
    "crates/rail-bridge",
    "crates/fs-mount",
    "crates/proto",
    "crates/registry-scan",
    "xtask",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/SzymonPaczos/CrossDesk"

[workspace.dependencies]
tokio   = { version = "1", features = ["full"] }
tonic   = { version = "0.12", features = ["tls", "transport"] }
prost   = "0.13"
prost-types = "0.13"
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_System_Threading", "Win32_System_SystemInformation"] }
anyhow  = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "json", "env-filter"] }
hdrhistogram = "7"

# Workspace-wide clippy lints. `print_stdout`/`print_stderr` are denied
# per DEC-0006 — every Rust component logs via `tracing` (which the
# `observability` crate configures). Crates opt in via
# `lints.workspace = true` in their package table.
[workspace.lints.clippy]
print_stdout = "deny"
print_stderr = "deny"

# Lean dev profile to keep target/ disk usage manageable.
# Default `debug = true` produces ~4-6× larger artifacts than
# line-tables-only. We only need stack traces, not full source-level
# debugging. Per docs/CROSS_PLATFORM_DEV.md § "Disk hygiene".
[profile.dev]
debug = "line-tables-only"
incremental = true
codegen-units = 256

# Release profile optimized for shipped agent.exe size + startup.
# LTO + single codegen-unit makes builds slower but binaries materially
# smaller and faster. Used by the CI release matrix on tagged versions.
[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"

# CI runs benchmarks against this profile so numbers reflect optimized
# code.
[profile.bench]
debug = "line-tables-only"
lto = "thin"
