[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crossdesk-host"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "grpcio>=1.63",
    "grpcio-tools>=1.63",
    "libvirt-python>=10.3",
    "systemd-python>=235",
    "cryptography>=41.0",
]

[project.scripts]
crossdesk-host = "crossdesk_host.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/crossdesk_host"]

[tool.mypy]
strict = true
python_version = "3.9"

# Generated protobuf modules use descriptor-pool attribute lookup that strict
# mypy cannot model without stubs from `mypy-protobuf`. Skipping their imports
# treats them as Any at the call site, which keeps --strict on real code.
[[tool.mypy.overrides]]
module = "crossdesk_host.proto.*"
follow_imports = "skip"
ignore_errors = true

[[tool.mypy.overrides]]
module = ["grpc", "grpc.*", "google.protobuf.*", "systemd", "systemd.*"]
ignore_missing_imports = true

[tool.black]
target-version = ["py39"]

[tool.ruff]
target-version = "py39"
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "mypy>=1.10",
    "black>=24.4",
    "ruff>=0.4",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "types-protobuf>=4.24",
    "mypy-protobuf>=3.6",
]
