[package]
name    = "agent-svc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "CrossDeskAgent"
path = "src/main.rs"

[dependencies]
anyhow  = { workspace = true }
tracing = { workspace = true }
tokio   = { workspace = true }
tonic   = { workspace = true }
tokio-stream = "0.1"
proto   = { path = "../proto" }
ipc-vsock = { path = "../ipc-vsock" }
rail-bridge = { path = "../rail-bridge" }
fs-mount = { path = "../fs-mount" }

# windows-service is Windows-only; conditionally declared so the crate still
# resolves on Linux toolchains used for cross-compilation checks.
[target.'cfg(windows)'.dependencies]
windows-service = "0.6"
