[package]
name    = "agent-svc"
version = "0.1.0"
edition = "2021"

[[bin]]
# Binary name is `agent` (→ agent.exe); the NT service name is
# `CrossDeskAgent`, registered at install time. See REQUIREMENTS F1.9.
name = "agent"
path = "src/main.rs"

# `mock` propagates to ipc-vsock so MockTransport is available, and to
# the binary so `cargo run --features mock` skips the SCM dispatcher
# even on Windows. Used by the in-process integration harness in
# host/tests/test_smoke_inprocess.py.
[features]
default = []
mock = ["ipc-vsock/mock"]

[dependencies]
anyhow  = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio   = { workspace = true }
tonic   = { workspace = true }
tokio-stream = "0.1"
proto   = { path = "../proto" }
ipc-vsock = { path = "../ipc-vsock" }
rail-bridge = { path = "../rail-bridge" }
fs-mount = { path = "../fs-mount" }

# windows-service and the windows crate are Windows-only; conditionally declared
# so the crate still resolves on Linux toolchains used for cross-compilation checks.
[target.'cfg(windows)'.dependencies]
windows-service = "0.6"
windows         = { workspace = true }
