[package]
name    = "fs-mount"
version = "0.1.0"
edition = "2021"

license.workspace = true
repository.workspace = true
[dependencies]
windows = { workspace = true, features = ["Win32_Storage_FileSystem", "Win32_Foundation"] }
anyhow  = { workspace = true }
tracing = { workspace = true }
tokio   = { workspace = true }
proto   = { path = "../proto" }

[lints]
workspace = true
