[package]
name    = "ipc-vsock"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio   = { workspace = true }
tonic   = { workspace = true }
anyhow  = { workspace = true }
tracing = { workspace = true }
tower   = "0.4"
proto   = { path = "../proto" }
rand    = "0.8"
hex     = "0.4"
sha2    = "0.10"
pem     = "3"
