[package]
name    = "ipc-vsock"
version = "0.1.0"
edition = "2021"

# Feature gating per DEC-0005 (mock-driven testing as architectural
# foundation). The `mock` feature swaps the real AF_VSOCK transport for
# an in-process TCP-loopback implementation that preserves the same
# mTLS + AuthContext semantics so unit tests run on any host (including
# Macs without VSOCK kernel support).
license.workspace = true
repository.workspace = true
[features]
default = []
mock = []

[dependencies]
tokio   = { workspace = true }
tonic   = { workspace = true }
anyhow  = { workspace = true }
tracing = { workspace = true }
tower   = "0.4"
# Wraps tokio::net::TcpStream so it implements hyper-1's Read/Write,
# which is what tonic 0.12's `connect_with_connector` requires.
hyper-util = { version = "0.1", features = ["tokio"] }
proto   = { path = "../proto" }
rand    = "0.8"
hex     = "0.4"
sha2    = "0.10"
pem     = "3"

[lints]
workspace = true
