[package]
name = "registry-scan"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { workspace = true, features = [
    "Win32_System_Registry",
    "Win32_Foundation",
] }

[lints]
workspace = true
