[package]
name = "crossdesk-tray"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lib]
path = "src/lib.rs"

[[bin]]
name = "crossdesk-tray"
path = "src/main.rs"

[dev-dependencies]
tracing-subscriber = { workspace = true }
